# TF_Github

./: LICENSE  Makefile  README.md  pyproject.toml
models/: modelo_regresion_lineal.joblib
notebooks/: desarrollo_modelo.ipynb
