[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "predicci\u00f3n_de_precio_de_autos"
version = "0.0.1"
description = "Este es el Trabajo Final del curso de Github donde se detallar\u00e1 todos los pasos de un proyecto usando Github"
authors = [
  { name = "Ronaldo David Cornejo Valencia" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["predicción_de_precio_de_autos"]
include = ["pyproject.toml", "predicción_de_precio_de_autos/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["predicción_de_precio_de_autos"]
force-sort-within-sections = true

